fixed mobile spacing issues

--- a/src/components/NewsAndEvents.module.css
+++ b/src/components/NewsAndEvents.module.css
@@ -105,4 +105,7 @@
     grid-template-columns: repeat(1, 1fr);
     row-gap: 30px;
   }
+  .sectionNews {
+    height: 100% !important;
+  }
 }
